--- a/VRLesson1_4Classwork/index.html
+++ b/VRLesson1_4Classwork/index.html
@@ -8,6 +8,8 @@
       <!-- Task 1: Wrap the components below into an entity. "Label" it snowman -->
       <!-- Task 2: Duplicate the snowman to different locations and rotation -->
         <!-- Body -->
+
+         <!--snowman-->
         <a-entity>
         <a-sphere position="0 0.5 -0.5" radius="1.25" color="white"></a-sphere>
         <a-sphere position="0 2.25 -0.5" radius="1.05" color="white"></a-sphere>
@@ -21,6 +23,7 @@
         <a-cylinder position="1.25 2.75 -0.25" color="#A52A2A" rotation="0 0 -60" height="2" radius="0.15"></a-cylinder>
         </a-entity>
 
+        <!--snowman-->
         <a-entity position ="-5 0 3" rotation="-30 0 0">
         <a-sphere position="0 0.5 -0.5" radius="1.25" color="white"></a-sphere>
         <a-sphere position="0 2.25 -0.5" radius="1.05" color="white"></a-sphere>
@@ -34,6 +37,7 @@
         <a-cylinder position="1.25 2.75 -0.25" color="#A52A2A" rotation="0 0 -60" height="2" radius="0.15"></a-cylinder>
         </a-entity>
 
+        <!--snowman-->
         <a-entity position ="6 2 3">
         <a-sphere position="0 0.5 -0.5" radius="1.25" color="white"></a-sphere>
         <a-sphere position="0 2.25 -0.5" radius="1.05" color="white"></a-sphere>
@@ -47,6 +51,7 @@
         <a-cylinder position="1.25 2.75 -0.25" color="#A52A2A" rotation="0 0 -60" height="2" radius="0.15"></a-cylinder>
         </a-entity>
 
+        <!--snowman-->
         <a-entity position ="7 0 13" rotation = "0 180 0">
         <a-sphere position="0 0.5 -0.5" radius="1.25" color="white"></a-sphere>
         <a-sphere position="0 2.25 -0.5" radius="1.05" color="white"></a-sphere>
@@ -62,6 +67,8 @@
 
       <!-- Task 3: Wrap the components below into an entity. "Label" it tree -->
       <!-- Task 4: Duplicate the tree to different locations and rotation -->
+
+      <!--tree-->
        <a-entity position="-10 0 2">
         <!-- Trunk -->
         <a-cylinder position="0 0 0" height="3" radius=".75" color="brown"></a-cylinder>
@@ -74,6 +81,7 @@
         <a-cone position="0 6.5 0" height="1.5" radius-bottom="0.7" radius-top="0.1" color="green"></a-cone>
         </a-entity>
       
+        <!--tree-->
         <a-entity position="5 1 3" rotation="0 0 100">
         <!-- Trunk -->
         <a-cylinder position="0 0 0" height="3" radius=".75" color="brown"></a-cylinder>
@@ -86,6 +94,7 @@
         <a-cone position="0 6.5 0" height="1.5" radius-bottom="0.7" radius-top="0.1" color="green"></a-cone>
         </a-entity>
 
+        <!--tree-->
         <a-entity position="7 0 8" rotation="70 0 0">
         <!-- Trunk -->
         <a-cylinder position="0 0 0" height="3" radius=".75" color="brown"></a-cylinder>
@@ -98,7 +107,6 @@
         <a-cone position="0 6.5 0" height="1.5" radius-bottom="0.7" radius-top="0.1" color="green"></a-cone>
         </a-entity>
 
-        
 
       <a-plane src="floor.jpg" position="0 0 -1" rotation="-90 0 0" width="50" height="50"></a-plane>
       <a-sky src="snow.jpg" repeat = "10 10"></a-sky>
