--- a/VRPractical1_1/index.html
+++ b/VRPractical1_1/index.html
@@ -280,8 +280,9 @@
 
 
 
-      <a-plane src="13989879-asphalt-road-texture-with-yellow-stripe.jpg" position="0 0 -4" rotation="-90 0 0" width="7" height="14" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+      <a-plane src="13989879-asphalt-road-texture-with-yellow-stripe.jpg" position="0 0 -4" rotation="-90 0 0" width="7" height="20" color="#7BC8A4"></a-plane>
+      <a-sky src="1b518e73835b69cb1876285878e9f29a.jpg"></a-sky>
+      <a-camera position="0 1.5 6 "></a-camera>
     </a-scene>
   </body>
 </html>
