--- a/VRLesson1_6Classwork/index.html
+++ b/VRLesson1_6Classwork/index.html
@@ -8,6 +8,13 @@
     Add an asset manager that preloads images for the ids below which are being referenced throughout the VR world. 
 IDs: spiderskin, rock, spidereye, cave, and bk          
 -->
+      <a-assets>
+        <img src="web.png" id="bk">
+        <img src="cave4.jpg" id="cave">
+        <img src="spidereye2.jpg" id="spidereye">
+        <img src="cave3.jpg" id="rock">
+        <img src="spiderskin3.jpg" id="spiderskin">
+      </a-assets>
 
 
       <a-sky src="#bk" repeat="6 6"></a-sky>
