--- a/VRPractical2_4/index.html
+++ b/VRPractical2_4/index.html
@@ -4,7 +4,7 @@
     <script src="script.js"></script>
     <script src="rocket.js"></script>
     <script src="ufo.js"></script>
-    <script src="fire.js"></script>
+    <script src="hole.js"></script>
   </head>
   <body>
       <a-scene>
@@ -56,10 +56,8 @@
         
 
         <a-entity  id="holeTemplate">
-          <a-circle src="#hole" radius = "40" position="0 0.15 0" rotation="-90 0 0"></a-circle>
+          <a-cylinder src="#hole" position="0 0.14 0" radius="40" height="0.001"></a-cylinder>
         </a-entity>
-        
-
 
 
 
