--- a/VRPractical3_2/index.html
+++ b/VRPractical3_2/index.html
@@ -8,9 +8,35 @@
   </head>
     <body>
       <a-scene >
-        <a-plane color="brown" position="0 0 -5" rotation="-90 0 0" width="50" height="50"></a-plane>
+
+        <a-assets>
+          <img id="outside" src="outside.jpeg"/>
+          <img id="inside" src="inside.webp"/>
+          <img id="roof" src="roof.png"/>
+          <img id="grass" src="grass.jpg"/>
+          <img id="path" src="path.jpg"/>
+          <img id="fence" src="fence.jpg"/>
+          <img id="road" src="road.jpg"/>
+          <img id="pavement" src="pavement.jpg"/>
+          <img id="floor" src="floor.jpg"/>
+          <img id="top" src="top.jpg"/>
+          <img id="windshield" src="360_F_915466089_t0bYKg9NRxeFWUNWVAic2e23Ng0l7WqK.jpg"/>
+          <img id="light" src="1000_F_273605135_CxSN62MwLUb5R18c0q30TIeaSzSnG5UJ.jpg"/>
+          <img id="plate" src="excelsior_embossed_plate_3d_master.jpg"/>
+          <img id="grill" src="grilltexture.jpg"/>
+          <img id="tire" src="istockphoto-502936829-612x612.jpg"/>
+          <img id="seat" src="textured-brown-leather-texture-with-stitched-lines_494516-980.jpg"/>
+          <img id="tree" src="tree.jpg"/>
+          <img id="leaf" src="leaf.jpg"/>
+          <img id="sky" src="sky1.jpeg"/>
+        </a-assets>
+
+
+
+        <a-plane src="#grass" repeat="20 20"position="0 0 -5" rotation="-90 0 0" width="50" height="50"></a-plane>
         <a-plane color="grey" position="0 0.005 -17.5" rotation="-90 0 0" width="50" height="25" ></a-plane>
-        <a-sky color="blue"></a-sky>
+        <a-plane src="#road" repeat="10 1" position="0 0.05 -5" rotation="-90 0 0" width="50" height="6"></a-plane>
+        <a-sky  src="#sky"></a-sky>
 
         <a-camera position="0 3 0">
           <a-cursor        <!raycaster="objects: [interact]"--      ></a-cursor>
@@ -26,7 +52,7 @@
       </a-entity>
 
 
-      <a-entity id="carTemplate" class="car" width="1.5" height="2" depth="3" scale="1.5 1.5 1.5" rotation = "0 90 0">
+      <a-entity id="carTemplate" class="car" width="1.5" height="2" depth="3" scale="1.25 1.25 1.25" rotation = "0 90 0">
           <a-box color="rgb(255,255,167)" position = "0 -0.5 0" depth = "2.5" width = "0.8" height="0.1"> </a-box>
 
           <a-torus src="#tire" radius="0.25" radius-tubular="0.05" rotation="0 90 0" position="-0.5 -0.73 1.1"></a-torus>
