--- a/VRLesson3_4Classwork/index.html
+++ b/VRLesson3_4Classwork/index.html
@@ -13,10 +13,13 @@
           <a-text id="time" position="-2 1 -1" value="Time: " color="black"></a-text>
           <!-- Challenge 1
                Add a text component to display the score -->
+          <a-text id="score" position="2 1 -1" value="Score: " color="black"></a-text>
 
           <!-- Challenge 2
                Using <a-image> add the image of gun.png to the HUD
           -->
+          <a-image src="gun.png"></a-image>
+
         </a-cursor>
       </a-camera>
     </a-scene>
