--- a/VRLesson3_5aClasswork/index.html
+++ b/VRLesson3_5aClasswork/index.html
@@ -6,16 +6,18 @@
     <body >
       <a-scene >
         <a-plane color="brown" position="0 0 -5" rotation="-90 0 0" width="50" height="50"></a-plane>
-        <a-box id="target" position="-5 1 0" color="yellow"></a-box>
+        <a-box id="target1" position="-5 1 0" color="yellow"></a-box>
         <!-- Challenge 1:
              Add another box on the right for the ball to collide with 
         -->
+        <a-box id="target2" position="5 1 0" color="yellow"></a-box>
+
         <a-sphere id="ball" position="0 1 0" radius="0.5"></a-sphere>
         <a-sky color="blue"></a-sky>
 
         <a-camera position="0 1.6 5">
           <a-cursor raycaster="objects: [interact]">
-            <a-text id="output" position="-1 2 -2"></a-text>
+            <a-text id="output" position="-1 2 -1"></a-text>
           </a-cursor>
         </a-camera>
         
