--- a/VRPractical3_3/index.html
+++ b/VRPractical3_3/index.html
@@ -3,12 +3,42 @@
     <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
     <script src="bullet.js"></script>
     <script src="script.js"></script>
+    <script src="rocket.js"></script>
+    <script src="ufo.js"></script>
   </head>
   <body>
     <a-scene>
+
       <a-plane position="0 0 -4" rotation="-90 0 0" width="40" height="40" color="#7BC8A4"></a-plane>
       <a-sky color="#ECECEC"></a-sky>
-      <a-camera position="0 1.6 0"></a-camera>
+      <a-camera position="0 1 0">
+
+        <a-cursor>
+          <a-text id="score" position="-2 1 -1" value="Ammo: " color="black"></a-text>
+        </a-cursor>
+
+      </a-camera>
     </a-scene>
+
+
+    <a-entity id="rocketTemplate" rotation="90 0 0" class="rocket">
+        <a-cone radius-top="0" radius-bottom="0.5" height="1" color="red" position="0 0 -2"></a-cone>
+        <a-cylinder radius="0.5" height="2" color="blue" position="0 -1.5 -2"></a-cylinder>
+        <a-cone radius-top="0" radius-bottom="0.25" height="2" color="orange" position="0 -3.5 -2" rotation="-180 0 0"></a-cone>
+    </a-entity>
+
+
+
+    <a-entity id="ufoTemplate" class="ufo" position="0 0 0" scale="0.25 0.25 0.25">
+        <a-cone color="yellow" height="0.5" radius-top="1" radius-bottom="0.85" position="0 -0.5 0"></a-cone>
+        <a-sphere radius="1" position="0 0.8 0" opacity="0.3"></a-sphere>
+        <a-cylinder radius="1.75" height="0.5" color="red"></a-cylinder>
+        <a-sphere radius="0.5" position="0 0.7 0" color="green" scale="1.25 2 1"></a-sphere>
+        <a-sphere radius="0.1" position="-0.15 0.9 0.5" color="black" scale=" 1.5 1"></a-sphere>
+        <a-sphere radius="0.1" position="0.15 0.9 0.5" color="black" scale=" 1.5 1"></a-sphere>
+    </a-entity>
+
+
+
   </body>
 </html>
