--- a/VRPractical3_3/index.html
+++ b/VRPractical3_3/index.html
@@ -17,6 +17,18 @@
         <img id="sky" src="sky.jpg"/>
         <img id="road" src="road.jpg"/>
         <img id="pavement" src="pavement.jpg"/>
+
+        <img id="outside" src="outside.jpeg"/>
+        <img id="inside" src="inside.webp"/>
+        <img id="roof" src="roof.png"/>
+        <img id="path" src="path.jpg"/>
+        <img id="fence" src="fence.jpg"/>
+        <img id="top" src="top.jpg"/>
+        <img id="tree" src="tree.jpg"/>
+        <img id="leaf" src="leaf.jpg"/>
+
+
+
       </a-assets>
 
 
